# pns-pallets

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  Dockerfile  README.md  STORAGE_AND_RPC.md  SURFACE_AUDIT.rs  libbenchmarks.rlib  pns-genesis-wasm  pns-paseo-raw.json
docs/: HOW_NAMES_WORK.md
node/: Cargo.toml  pns_rpc_types.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  pns_rpc.rs  rpc.rs  service.rs
pallets/pns-ddns/: Cargo.toml
pallets/pns-ddns/src/: authority.rs  dns_server.rs  lib.rs  metrics.rs
pallets/pns-marketplace/: Cargo.toml
pallets/pns-marketplace/src/: lib.rs  marketplace_weights.rs
pallets/pns-registrar/: Cargo.toml
pallets/pns-registrar/src/: auction.rs  benchmarks.rs  lib.rs  migration.rs  mock.rs  nft.rs  origin.rs  price_oracle.rs  price_oracle_weights.rs  redeem_code.rs  registrar.rs  registrar_weights.rs  registry.rs  tests.rs  traits.rs
pallets/pns-resolvers/: Cargo.toml
pallets/pns-resolvers/src/: benchmarks.rs  lib.rs  resolvers.rs  resolvers_weights.rs
pallets/pns-runtime-api/: Cargo.toml
pallets/pns-runtime-api/src/: lib.rs
pallets/pns-types/: Cargo.toml
pallets/pns-types/src/: ddns.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
