[workspace]
members = [
    "pallets/template",
    # PNS pallets
    "pallets/pns-types",
    "pallets/pns-registrar",
    "pallets/pns-resolvers",
    "pallets/pns-runtime-api",
    "pallets/pns-ddns",
    "pallets/pns-marketplace",
]
resolver = "2"

[workspace.package]
authors = ["PNS Contributors"]
edition = "2024"
homepage = "https://github.com/prodigalwon/pns-pallets"
repository = "https://github.com/prodigalwon/pns-pallets"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }

[workspace.dependencies]
# Build deps
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603" }

# External
codec = { version = "3.0", package = "parity-scale-codec", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
jsonrpsee = { version = "0.24", features = ["server"] }
axum = "0.7"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["net", "rt", "macros"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
hex = "0.4"
serde_json2 = { version = "1", package = "serde_json" }
hickory-server = { version = "0.25" }
hickory-proto = { version = "0.25" }
thiserror = "1"
moka = { version = "0.12", features = ["sync"] }
governor = "0.6"
bloomfilter = "1"
core_affinity = "0.8"
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }

# Polkadot SDK — primitives (used by pallet crates and pns-ddns)
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }

# Polkadot SDK — frame (used by pallet crates)
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2603", default-features = false }

# PNS pallets
pns-types = { path = "pallets/pns-types", default-features = false }
pns-registrar = { path = "pallets/pns-registrar", default-features = false }
pns-resolvers = { path = "pallets/pns-resolvers", default-features = false }
pns-runtime-api = { path = "pallets/pns-runtime-api", default-features = false }
pns-ddns = { path = "pallets/pns-ddns" }
pns-marketplace = { path = "pallets/pns-marketplace", default-features = false }