[package]
name = "pns-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
polkadot-sdk = { workspace = true, features = ["node"] }
serde         = { workspace = true }
serde_json    = "1"

codec         = { workspace = true }
axum          = { workspace = true }
tracing       = { workspace = true }
async-trait   = { workspace = true }
tokio         = { version = "1", default-features = false, features = ["net", "rt-multi-thread", "macros", "sync", "time"] }

hickory-server = { workspace = true }
hickory-proto  = { workspace = true }

moka         = { workspace = true }
governor     = { workspace = true }
bloomfilter  = { workspace = true }
core_affinity = { workspace = true }

pns-types       = { path = "../pns-types",       features = ["std"] }
pns-runtime-api = { path = "../pns-runtime-api", features = ["std"] }
pns-registrar   = { path = "../pns-registrar",   features = ["std"] }
pns-resolvers   = { path = "../pns-resolvers",   features = ["std"] }

[dev-dependencies]
tracing-subscriber = "0.3"
