[package]
name = "pns-types"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polkadot-sdk = { workspace = true, features = ["runtime"] }
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
hickory-proto = { workspace = true, optional = true }


[features]
default = ['std']
std = ['polkadot-sdk/std', 'codec/std', 'scale-info/std', 'serde/std', 'hickory-proto']
kusama = []

runtime-benchmarks = ['polkadot-sdk/runtime-benchmarks']
try-runtime = ['polkadot-sdk/try-runtime']